--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
+    "react-bootstrap": "^2.2.3",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
