--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
+    "react-chartjs-2": "^4.1.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
