--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
