--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^4.1.3",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-react": "^2.0.1",
+    "@coreui/react": "^4.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -15,6 +23,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
