--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.1",
+    "icons": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -15,7 +21,6 @@
     "react-chartjs-2": "^4.1.0",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
-    "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
