--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aphrodite": "^2.4.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "chart.js": "^3.7.1",
